objects/SDO_Sales_GPT_Simulated_Action__c.object
<CustomObject>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To__c</fullName>
        <description>Leave blank for empty email field</description>
        <label>Email To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flow_API_Name__c</fullName>
        <label>Flow API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_GPT_Next_Reply__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Reply</label>
        <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
        <relationshipLabel>Sales GPT Simulated Actions (Sales GPT Next Reply)</relationshipLabel>
        <relationshipName>Sales_GPT_Simulated_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_GPT_Simulated_Reply__c</fullName>
        <label>Simulated Reply</label>
        <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
        <relationshipLabel>Sales GPT Simulated Actions (Sales GPT Simulated Replies)</relationshipLabel>
        <relationshipName>SDO_Sales_GPT_Simulated_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Field_Api_Name__c</fullName>
        <label>Target Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Record_Id__c</fullName>
        <label>Target Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Copy to Clipboard</fullName>
                </value>
                <value>
                    <fullName>Edit Record</fullName>
                </value>
                <value>
                    <fullName>Email Composer</fullName>
                </value>
                <value>
                    <fullName>Field Update</fullName>
                </value>
                <value>
                    <fullName>Launch Flow</fullName>
                </value>
                <value>
                    <fullName>Open URL</fullName>
                </value>
                <value>
                    <fullName>Toggle Next Reply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_With__c</fullName>
        <label>Update With</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sales GPT Simulated Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Simulated Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales GPT Simulated Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>